// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple templates, mostly static can render a table row 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<tr><td>cell</td></tr>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`simple templates, mostly static div with a class attribute 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div class="abc">foo</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`simple templates, mostly static div with a class attribute with a quote 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div class="a'bc">word</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`simple templates, mostly static div with a span child node 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div><span>word</span></div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`simple templates, mostly static div with an arbitrary attribute with a quote 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div abc="a'bc">word</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`simple templates, mostly static div with an empty class attribute 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>word</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`simple templates, mostly static div with content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>foo</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`simple templates, mostly static dom node with t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['text']);
    return block1([], [b2]);
  }
}"
`;

exports[`simple templates, mostly static dom node with t-out 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['text']);
    return block1([], [b2]);
  }
}"
`;

exports[`simple templates, mostly static dynamic text value 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['text']);
  }
}"
`;

exports[`simple templates, mostly static empty div 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`simple templates, mostly static empty string 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`\`);
  }
}"
`;

exports[`simple templates, mostly static empty string in a template set 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`\`);
  }
}"
`;

exports[`simple templates, mostly static inline template string in t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(\`text\`);
  }
}"
`;

exports[`simple templates, mostly static inline template string with content in t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { isBoundary, withDefault, setContextValue, safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx[isBoundary] = 1
    setContextValue(ctx, "v", 1);
    return safeOutput(\`text\${ctx['v']}\`);
  }
}"
`;

exports[`simple templates, mostly static inline template string with variable in context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(\`text \${ctx['v']}\`);
  }
}"
`;

exports[`simple templates, mostly static multiple root nodes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block2 = createBlock(\`<div>foo</div>\`);
  let block3 = createBlock(\`<span>hey</span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = block2();
    const b3 = block3();
    return multi([b2, b3]);
  }
}"
`;

exports[`simple templates, mostly static simple string 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`hello vdom\`);
  }
}"
`;

exports[`simple templates, mostly static simple string in t tag 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`hello vdom\`);
  }
}"
`;

exports[`simple templates, mostly static static text and dynamic text (no t tag) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`hello \`);
    const b3 = safeOutput(ctx['text']);
    return multi([b2, b3]);
  }
}"
`;

exports[`simple templates, mostly static static text and dynamic text 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`hello \`);
    const b3 = safeOutput(ctx['text']);
    return multi([b2, b3]);
  }
}"
`;

exports[`simple templates, mostly static t-out in dom node 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['text']);
    return block1([], [b2]);
  }
}"
`;

exports[`simple templates, mostly static t-out in dom node, variations 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div>hello <block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['text']);
    return block1([], [b2]);
  }
}"
`;

exports[`simple templates, mostly static t-out in dom node, variations 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div>hello <block-child-0/> world</div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['text']);
    return block1([], [b2]);
  }
}"
`;

exports[`simple templates, mostly static template with multiple t tag with multiple content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/>Loading<block-child-2/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['a']);
    const b3 = safeOutput(ctx['b']);
    const b4 = safeOutput(ctx['c']);
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`simple templates, mostly static template with t tag with multiple content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>Loading<block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (false) {
      b2 = text(\`\`);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`simple templates, mostly static text node with backslash at top level 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`\\\\\`);
  }
}"
`;

exports[`simple templates, mostly static text node with backtick at top-level 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`\\\`\`);
  }
}"
`;

exports[`simple templates, mostly static text node with interpolation sigil at top level 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`\\\${very cool}\`);
  }
}"
`;

exports[`simple templates, mostly static two t-outs next to each other 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['text1']);
    const b3 = safeOutput(ctx['text2']);
    return multi([b2, b3]);
  }
}"
`;

exports[`simple templates, mostly static two t-outs next to each other 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['text1']);
    const b3 = safeOutput(ctx['text2']);
    return multi([b2, b3]);
  }
}"
`;

exports[`simple templates, mostly static two t-outs next to each other, in a div 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['text1']);
    const b3 = safeOutput(ctx['text2']);
    return block1([], [b2, b3]);
  }
}"
`;
